[package]
name = "maruw"
version = "0.1.0"
edition = "2021"
description = "WIP crate for the web"
repository = "https://github.com/blumafe/maruw.git"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
